<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tv1"
        app:layout_constraintTop_toBottomOf="@id/gl2"
        app:layout_constraintStart_toEndOf="@id/gl1"
        android:text="@string/_tv1"
        android:textColor="#000000"
        android:gravity="center"
        android:textSize="28sp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl1"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".203"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".18"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <EditText
        android:id="@+id/edt1"
        android:hint="@string/_edt1"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="#F4F6FA"
        android:autofillHints="@string/_edt1" />
    <EditText
        android:id="@+id/edt2"
        android:inputType="numberPassword"
        android:hint="@string/_edt2"
        app:layout_constraintTop_toBottomOf="@id/edt1"
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:background="#FFEEEC"
        android:layout_height="46dp"
        android:autofillHints="@string/_edt2" />
    <EditText
        android:id="@+id/edt3"
        android:inputType="numberPassword"
        android:hint="@string/_edt3"
        app:layout_constraintTop_toBottomOf="@id/edt2"
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:background="#F4F6FA"
        android:layout_height="46dp"
        android:autofillHints="@string/_edt3" />
    <Button
        android:id="@+id/btn1"
        android:text="@string/_btn1"
        app:layout_constraintTop_toBottomOf="@id/edt3"
        android:layout_marginTop="48dp"
        android:layout_width="match_parent"
        android:background="#1F9FFC"
        android:layout_height="48dp" />
    <TextView
        android:id="@+id/tv3notify"
        android:textSize="15sp"
        android:textColor="#CF1F1F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="22dp"/>
    <TextView
        android:id="@+id/tv4"
        android:textSize="12sp"
        android:textColor="#000000"
        android:text="@string/_chuy"
        app:layout_constraintTop_toBottomOf="@id/tv3notify"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>