<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl1"
        android:layout_width="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".064"
        android:layout_height="match_parent"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl3"
        android:layout_width="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".96"
        android:layout_height="match_parent"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".187"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/tv1"
        android:text="@string/_b2tv1"
        android:textSize="20sp"
        android:textColor="#161616"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        app:layout_constraintStart_toEndOf="@id/gl1"
        app:layout_constraintTop_toBottomOf="@id/gl2"/>
    <EditText
        android:id="@+id/edt1"
        android:inputType="number"
        android:hint="@string/_b2edt1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="#F4F6FA"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        app:layout_constraintStart_toEndOf="@id/gl1"
        app:layout_constraintEnd_toEndOf="@id/gl3"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/_b2edt1" />
    <EditText
        android:id="@+id/edt2"
        android:inputType="textEmailAddress"
        android:hint="@string/_b2edt2"
        android:textColor="#8E8E8E"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/edt1"
        app:layout_constraintStart_toEndOf="@id/gl1"
        app:layout_constraintEnd_toEndOf="@id/gl3"
        android:layout_marginTop="24dp"
        android:background="#FFEECC"
        android:autofillHints="@string/_b2edt2" />
    <EditText
        android:id="@+id/edt3"
        android:inputType="textCapWords"
        android:hint="@string/_b2edt3"
        android:textColor="#8E8E8E"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/edt2"
        app:layout_constraintStart_toEndOf="@id/gl1"
        app:layout_constraintEnd_toEndOf="@id/gl3"
        android:layout_marginTop="24dp"
        android:background="#F4F6FA"
        android:autofillHints="@string/_b2edt3" />
    <EditText
        android:id="@+id/edt4"
        android:inputType="text"
        android:hint="@string/_b2edt4"
        android:textColor="#8E8E8E"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/edt3"
        app:layout_constraintStart_toEndOf="@id/gl1"
        app:layout_constraintEnd_toEndOf="@id/gl3"
        android:layout_marginTop="24dp"
        android:background="#F4F6FA"
        android:autofillHints="@string/_b2edt4" />
    <EditText
        android:id="@+id/edt5"
        android:inputType="numberPassword"
        android:hint="@string/_b2edt5"
        android:textColor="#8E8E8E"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/edt4"
        app:layout_constraintStart_toEndOf="@id/gl1"
        app:layout_constraintEnd_toEndOf="@id/gl3"
        android:layout_marginTop="24dp"
        android:background="#F4F6FA"
        android:autofillHints="@string/_b2edt5" />
    <Button
        android:id="@+id/btn1"
        android:text="Tiep tuc"
        android:textSize="20sp"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="#1F9FFC"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/edt5"
        app:layout_constraintStart_toEndOf="@id/gl1"
        app:layout_constraintEnd_toStartOf="@id/gl3"/>
    <TextView
        android:id="@+id/edt1_notify"
        tools:text="aaaaaaaaaaaaaaaaaaa"
        android:textSize="15sp"
        android:textColor="#FF4E3D"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintStart_toEndOf="@id/gl1"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/edt2_notify"
        tools:text="aaaaaaaaaaaaaaaaaaa"
        android:textSize="15sp"
        android:textColor="#FF4E3D"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/edt1_notify"
        app:layout_constraintStart_toEndOf="@id/gl1"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/edt3_notify"
        tools:text="aaaaaaaaaaaaaaaaaaa"
        android:textSize="15sp"
        android:textColor="#FF4E3D"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/edt2_notify"
        app:layout_constraintStart_toEndOf="@id/gl1"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/edt4_notify"
        tools:text="aaaaaaaaaaaaaaaaaaa"
        android:textSize="15sp"
        android:textColor="#FF4E3D"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/edt3_notify"
        app:layout_constraintStart_toEndOf="@id/gl1"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/tv2"
        android:textSize="12sp"
        android:textColor="#000000"
        android:text="@string/_chuy"
        app:layout_constraintTop_toBottomOf="@id/edt4_notify"
        app:layout_constraintStart_toStartOf="@id/gl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>