<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl1"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".064" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl2"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".04" />

    <EditText
        android:id="@+id/edt1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints="@string/_b3edt1"
        android:background="#F4F6FA"
        android:hint="@string/_b3edt1"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@id/gl2"
        app:layout_constraintStart_toEndOf="@id/gl1"
        app:layout_constraintTop_toBottomOf="@id/gl3" />

    <EditText
        android:id="@+id/edt2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/_b3edt1"
        android:background="#F4F6FA"
        android:hint="@string/_b3edt1"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@id/gl2"
        app:layout_constraintStart_toEndOf="@id/gl1"
        app:layout_constraintTop_toBottomOf="@id/edt1" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#F4F6FA"
        android:hint="@string/_b3tv1"
        app:layout_constraintEnd_toStartOf="@id/gl2"
        app:layout_constraintStart_toEndOf="@id/gl1"
        app:layout_constraintTop_toBottomOf="@id/edt2" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/gl2"
        app:layout_constraintStart_toEndOf="@id/gl1"
        app:layout_constraintTop_toBottomOf="@id/tv1">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#1F9FFC"
            android:text="@string/cong" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:background="#1F9FFC"
            android:text="-" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:background="#1F9FFC"
            android:text="*" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:background="#1F9FFC"
            android:text=":" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>